@@ -1,46 +1,54 @@
 package controller;
 
 import org.example.controller.TrainingTypeController;
-import org.example.dto.trainingtype.TrainingTypeDto;
 import org.example.service.TrainingTypeService;
+import org.example.util.GlobalExceptionHandler;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.List;
+import java.util.Collections;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 class TrainingTypeControllerTest {
 
+    private MockMvc mockMvc;
     private TrainingTypeService trainingTypeService;
-    private TrainingTypeController trainingTypeController;
 
     @BeforeEach
     void setUp() {
-        trainingTypeService = mock(TrainingTypeService.class);
-        trainingTypeController = new TrainingTypeController(trainingTypeService);
+        trainingTypeService = Mockito.mock(TrainingTypeService.class);
+        TrainingTypeController controller = new TrainingTypeController(trainingTypeService);
+
+        mockMvc = MockMvcBuilders
+                .standaloneSetup(controller)
+                .setControllerAdvice(new GlobalExceptionHandler())
+                .build();
     }
 
     @Test
-    void getAllTrainingTypes_ShouldReturnListOfTypes() {
-        // Arrange
-        List<TrainingTypeDto> mockTypes = List.of(
-                new TrainingTypeDto(1L, "Cardio"),
-                new TrainingTypeDto(2L, "Strength")
-        );
+    void getAllTrainingTypes_shouldReturnOk_withEmptyList() throws Exception {
+        when(trainingTypeService.getAll()).thenReturn(Collections.emptyList());
 
-        when(trainingTypeService.getAll()).thenReturn(mockTypes);
+        mockMvc.perform(get("/training-types"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(content().json("[]")); // <= no jsonPath needed
+    }
 
-        // Act
-        ResponseEntity<List<TrainingTypeDto>> response = trainingTypeController.getAllTrainingTypes();
 
-        // Assert
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(2, response.getBody().size());
-        assertEquals("Cardio", response.getBody().get(0).getTrainingType());
-        verify(trainingTypeService, times(1)).getAll();
+    @Test
+    void getAllTrainingTypes_shouldReturnNotFound_whenServiceThrowsRuntimeException() throws Exception {
+        when(trainingTypeService.getAll()).thenThrow(new RuntimeException("boom"));
+
+        mockMvc.perform(get("/training-types"))
+                // per your GlobalExceptionHandler: RuntimeException -> 404
+                .andExpect(status().isNotFound());
     }
 }
